# SimpleCInterpreter

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Common.h  CompiledProgram.h  Interpreter.h  Parser.h  SourceCode.h  Tokenizer.h  main.cpp  my_ctype.h  terminals.inl
test/: constexpr_tests.cpp  tests.cpp
